force-app/main/default/objects/Waiver_Information__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case__c</referenceTo>
    <relationshipLabel>Waiver Information</relationshipLabel>
    <relationshipName>Waiver_Information</relationshipName>
    <type>Lookup</type>
</CustomField>