force-app/main/default/objects/Waiver_Information__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Waiver Information</relationshipLabel>
    <relationshipName>Waiver_Information</relationshipName>
    <type>Lookup</type>
</CustomField>