force-app/main/default/objects/Waiver_Information__c/fields/Waiver_Initiated_Date__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Initiated_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Waiver Initiated Date</label>
    <type>Date</type>
</CustomField>